--- a/style.css
+++ b/style.css
@@ -19,22 +19,30 @@ body {
     font-family: 'Roboto', sans-serif;
     font-size: 2.0rem;
     line-height: 29px;
+    font-weight: 400;
+    color: #201E21;
 }
 
 h1,
 h2,
 h3,
-h4, 
-ul {
+h4 {
     padding: 0;
     margin: 0;
     font-family: 'East Sea Dokdo', cursive;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
 
 .wrapper {
     width: 80%;
     max-width: 1200px;
     margin: 0 auto;
+    position: relative;
 }
 
 
@@ -50,6 +58,7 @@ header {
 h1 {
     font-family: 'East Sea Dokdo', cursive;
     font-size: 12.2rem;
+    font-weight: 400;
     width: 900px;
     line-height: 94.3px;
     margin-top: 35vh;
@@ -61,6 +70,7 @@ img {
 
 a {
     text-decoration: none;
+    color: #201E21;
 }
 
 li {
@@ -82,11 +92,13 @@ header nav li {
 h2 {
     font-size: 7.5rem;
     line-height: 36px;
+    font-weight: 400;
 }
 
 h3 {
     font-size: 5.5rem;
     line-height: 36px;
+    font-weight: 400;
 }
 
 button {
@@ -128,7 +140,7 @@ button a {
     margin-left: 40px;
 }
 
-/* exhibition section */
+/* exhibition/gallery section */
 
 .exhibition {
     background-color: #F7DAE8;
@@ -141,7 +153,7 @@ button a {
 
 .image-gallery li {
     float: left;
-    width: calc((100% / 3) - 40px);
+    width: calc((100% - 80px) / 3);
     margin-right: 40px;
 }
 
@@ -160,6 +172,9 @@ button a {
     width: calc(100% / 3);
 }
 
+.icon-img a {
+    color: #0178A5;
+}
 h3 {
     text-align: center;
 }
@@ -172,8 +187,13 @@ i {
 
 /* brush and paint section */
 
-.brush,
-.paint {
+/* .grid {
+    height: 50vw;
+    background-color: #F7DAE8;
+} */
+
+
+.grid {
     background-color: #F7DAE8;
 }
 
@@ -182,30 +202,67 @@ i {
     background-color: #A7059B;
 }
 
-.brush-container {
+.brush-container,
+.brush-img,
+.paint-img,
+.paint-container {
     float: left;
     width: 50%;
-    padding-top: 120px;
-    padding-right: 100px;
+}
+
+.brush-container {
+    height: 31.46vw;
+    display: table;
+}
+
+.brush-content {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.paint-container {
+    height: 19.70vw;
+    display: table;
+}
+
+.paint-content {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+/* .brush-container {
+    float: left;
+    display: table;
+    width: 50%;
+    height: 26.39vw;
+
+}
+
+.brush-content {
+    display: table-cell;
+    vertical-align: center;
 }
 
 .brush-img {
     float: right;
     width: 50%;
+    display: table;
+    object-fit: cover;
 }
 
 .paint-img {
     float: left;
-    object-fit: cover;
+    display: table;
     width: 50%;
+    object-fit: cover;
 }
 
 .paint-container {
     float: right;
     width: 50%;
-    padding-left: 100px;
-    padding-top: 120px;
-}
+    display: table;
+    height: 39.64vw;
+} */
 
 /* footer */
 
@@ -223,26 +280,37 @@ footer h3 {
     float: left;
 }
 
-.footer-nav {
-    width: 20%;
-}
+/* .footer-nav,
+.form,
+.contact {
+    width: calc((100% - 40px) / 3);
+} */
 
-.form {
-    width: 60%;
+.footer-nav {
+    margin-right: 40px;
 }
 
 .contact {
     float: right;
-    width: 20%;
 }
 
-input,
-label {
-    float: left;
+.form {
+    text-align: center;
+    position: absolute;
+    right: 30%;
+    width: 50%;
+}
+
+input {
+    vertical-align: middle;
+    margin: 0;
+    line-height: 29px;
 }
 
 .email {
     width: 50%;
+    margin: 0;
+    border: none;
 }
 
 .submit {
@@ -260,4 +328,12 @@ label {
 
 h4 {
     font-size: 4.0rem;
+}
+
+/* copyright */
+.copyright  {
+    background-color: #201E21;
+    color: white;
+    padding: 10px 0;
+    text-align: center;
 }
