--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h4 {
     padding: 0;
     margin: 0;
     font-family: 'East Sea Dokdo', cursive;
+    font-weight: 400;
 }
 
 ul {
@@ -185,13 +186,6 @@ i {
     font-size: 5.0rem;
 }
 
-/* brush and paint section */
-
-/* .grid {
-    height: 50vw;
-    background-color: #F7DAE8;
-} */
-
 
 .grid {
     background-color: #F7DAE8;
@@ -202,6 +196,7 @@ i {
     background-color: #A7059B;
 }
 
+
 .brush-container,
 .brush-img,
 .paint-img,
@@ -210,61 +205,44 @@ i {
     width: 50%;
 }
 
-.brush-container {
-    height: 31.46vw;
-    display: table;
+.brush,
+.paint {
+    height: 40vw;
 }
 
-.brush-content {
-    display: table-cell;
-    vertical-align: middle;
+.brush-img,
+.paint-img {
+    height: 100%;
 }
 
+.brush-img img,
+.paint-img img {
+    height: 100%;
+    object-fit: cover;
+}
+
+.brush-container,
 .paint-container {
-    height: 19.70vw;
+    height: 100%;
     display: table;
 }
 
+.brush-content,
 .paint-content {
     display: table-cell;
     vertical-align: middle;
 }
 
-/* .brush-container {
-    float: left;
-    display: table;
-    width: 50%;
-    height: 26.39vw;
-
-}
-
 .brush-content {
-    display: table-cell;
-    vertical-align: center;
+    padding-left: 20%;
+    padding-right: 10%;
 }
 
-.brush-img {
-    float: right;
-    width: 50%;
-    display: table;
-    object-fit: cover;
+.paint-content {
+    padding-right: 20%;
+    padding-left: 10%;
 }
 
-.paint-img {
-    float: left;
-    display: table;
-    width: 50%;
-    object-fit: cover;
-}
-
-.paint-container {
-    float: right;
-    width: 50%;
-    display: table;
-    height: 39.64vw;
-} */
-
-/* footer */
 
 footer {
     padding-top: 100px;
@@ -272,7 +250,7 @@ footer {
 }
 
 footer h3 {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .footer-nav,
@@ -280,54 +258,48 @@ footer h3 {
     float: left;
 }
 
-/* .footer-nav,
-.form,
-.contact {
-    width: calc((100% - 40px) / 3);
-} */
-
 .footer-nav {
     margin-right: 40px;
 }
 
 .contact {
     float: right;
+    text-align: right;
+}
+
+form {
+    text-align: center;
+    margin: 0;
 }
 
 .form {
-    text-align: center;
+    width: 60%;
     position: absolute;
-    right: 30%;
-    width: 50%;
+    left: 20%;
+    bottom: 20%;
 }
-
-input {
-    vertical-align: middle;
-    margin: 0;
-    line-height: 29px;
-}
-
-.email {
-    width: 50%;
-    margin: 0;
-    border: none;
-}
-
 .submit {
     border: none;
     font-family: 'East Sea Dokdo', cursive;
     font-size: 4.5rem;
+    font-weight: 400;
     line-height: 29px;
     color: white;
     background-color: #0178A5;
+    padding: 7px 10px;
 }
 
-.contact {
-    text-align: right;
+.email {
+    border: none;
+    line-height: 29px;
+    font-family: 'Roboto' sans-serif;
+    width: 60%;
+    padding: 7px 20px;
 }
 
-h4 {
-    font-size: 4.0rem;
+input {
+    vertical-align: middle;
+    margin-top: 30px;
 }
 
 /* copyright */
