--- a/style.css
+++ b/style.css
@@ -81,6 +81,7 @@ li {
 nav li {
     font-family: 'roboto', sans-serif;
     font-size: 2.0rem;
+    font-weight: 500;
 }
 
 header nav li {
@@ -130,15 +131,16 @@ button a {
     background-color: #FFE9E9;
 }
 
-.product-img img {
+.product-img {
     float: left;
-    width: 35%;
+    width: 30%;
+    margin-right: 40px;
 }
 
 .product-info {
     float: left;
-    width: calc(65% - 40px);
-    margin-left: 40px;
+    width: calc(70% - 40px);
+   
 }
 
 /* exhibition/gallery section */
@@ -243,9 +245,10 @@ i {
     padding-left: 10%;
 }
 
+/* footer */
 
 footer {
-    padding-top: 100px;
+    padding-top: 50px;
     background-color: #FFE9E9;
 }
 
@@ -293,7 +296,7 @@ form {
     border: none;
     line-height: 29px;
     font-family: 'Roboto' sans-serif;
-    width: 60%;
+    width: 50%;
     padding: 7px 20px;
 }
 
@@ -302,10 +305,86 @@ input {
     margin-top: 30px;
 }
 
+h4 {
+    font-size: 4.5rem;
+}
+
 /* copyright */
 .copyright  {
     background-color: #201E21;
     color: white;
     padding: 10px 0;
     text-align: center;
+}
+
+/* media queries */
+
+    /* small desktop */
+
+
+
+@media (max-width: 1040px) {
+    .product-img,
+    .product-info,
+    .brush-container,
+    .brush-img,
+    .paint-img,
+    .paint-container {
+        float: none;
+        width: 100%;
+    }
+        /* grid  */
+    .product-info {
+        padding-top: 5%;
+    }
+
+    .brush,
+    .paint {
+        height: 100%;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+
+    .brush-content,
+    .paint-content {
+        padding: 5% 10%;
+        text-align: center;
+    }
+
+    .paint {
+        display: table;
+        width: 100%;
+    }
+
+    .paint-img {
+        display: table-footer-group;
+    }
+
+    .paint-img img,
+    .brush-img img {
+        height: 50vw;
+    }
+
+            /* footer */
+
+    .form {
+        position: relative;
+        left: 0;
+        bottom: 0;
+    }
+
+    .footer-nav,
+    .form,
+    .contact {
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    .footer-nav li {
+        display: inline-block;
+        padding: 10px 15px;
+    }
+    
 }
