--- a/style.css
+++ b/style.css
@@ -56,11 +56,19 @@ header {
     padding-top: 10px;
 }
 
+header i {
+    text-align: right;
+    top: 5px;
+    right: 25px;
+    font-size: 4.0rem;
+    visibility: hidden;
+    color: white;
+}
+
 h1 {
     font-family: 'East Sea Dokdo', cursive;
     font-size: 12.2rem;
     font-weight: 400;
-    width: 900px;
     line-height: 94.3px;
     margin-top: 35vh;
 }
@@ -124,7 +132,7 @@ button a {
 .new-product,
 .exhibition,
 .icon {
-    padding: 120px 0;
+    padding: 80px 0;
 }
 
 .new-product {
@@ -188,6 +196,7 @@ i {
     font-size: 5.0rem;
 }
 
+/* grid section */
 
 .grid {
     background-color: #F7DAE8;
@@ -310,12 +319,23 @@ h4 {
 }
 
 /* copyright */
-.copyright  {
+.copyright,
+.juno  {
     background-color: #201E21;
     color: white;
-    padding: 10px 0;
     text-align: center;
 }
+
+.juno {
+    font-size: 1.5rem;
+}
+
+.juno a {
+    color: #F7DAE8;
+    text-decoration: underline;
+    padding: 0;
+}
+
 
 /* media queries */
 
@@ -338,6 +358,15 @@ h4 {
         padding-top: 5%;
     }
 
+    .exhibition,
+    .icon {
+        padding: 10% 0;
+    }
+
+    .exhibition h2 {
+        margin-bottom: 10%;
+    }
+
     .brush,
     .paint {
         height: 100%;
@@ -348,9 +377,10 @@ h4 {
 
     .brush-content,
     .paint-content {
-        padding: 5% 10%;
+        padding: 10% 10%;
         text-align: center;
     }
+
 
     .paint {
         display: table;
@@ -364,6 +394,7 @@ h4 {
     .paint-img img,
     .brush-img img {
         height: 50vw;
+        display: block;
     }
 
             /* footer */
@@ -382,9 +413,87 @@ h4 {
         text-align: center;
     }
 
+    .submit {
+        display: block;
+        float: none;
+        margin: 10px auto;
+    }
+
+    .email {
+        text-align: center;
+        width: 100%;
+    }
+
     .footer-nav li {
         display: inline-block;
         padding: 10px 15px;
     }
     
+}
+
+   
+
+/* portrait mode tablet */
+@media (max-width: 768px) {
+    header nav {
+        display: none;
+    }
+
+    header i {
+        visibility: visible;
+    }
+}
+
+@media (max-width: 624px) {
+
+    h1 {
+        word-wrap: break-word;
+        margin-top: 20vh;
+    }
+
+
+    .icon-container div {
+        float: none;
+        width: 100%;
+        margin-bottom: 50px;
+    }
+
+    .icon-container div:nth-of-type(3) {
+        margin-bottom: 0px;
+    }
+
+    .image-gallery li:nth-of-type(3) {
+        display: none;
+    }
+
+    .image-gallery li {
+        width: calc(50% - 5px);
+        margin-right: 5px;
+    }
+
+    .image-gallery li:nth-of-type(2) {
+        margin: 0;
+        float: right;
+    }
+    
+
+}
+
+/* mobile */
+
+@media (max-width: 480px) {
+    html {
+        font-size: 50%;
+    }
+    
+    header {
+        height: 80vh;
+    }
+
+}
+
+@media (max-width: 380px) {
+    .footer-nav li {
+        padding: 10px 7px;
+    }
 }
