--- a/style.css
+++ b/style.css
@@ -127,6 +127,16 @@ button a {
     text-transform: lowercase;
 }
 
+button a:hover {
+    padding: 10px 25px;
+    color: #F7DAE8;
+}
+
+nav a:hover {
+    font-weight: 700;
+}
+
+
 /* new product section */
 
 .new-product,
@@ -172,6 +182,7 @@ button a {
     margin-right: 0;
 }
 
+
 /* icon section */
 
 .icon {
@@ -186,6 +197,11 @@ button a {
 .icon-img a {
     color: #0178A5;
 }
+
+.icon-img i:hover {
+    font-size: 60px;
+}
+
 h3 {
     text-align: center;
 }
@@ -299,6 +315,10 @@ form {
     color: white;
     background-color: #0178A5;
     padding: 7px 10px;
+}
+
+.submit:hover {
+    padding: 10px 12px;
 }
 
 .email {
